--- a/.github/workflows/download-release.yml
+++ b/.github/workflows/download-release.yml
@@ -1,4 +1,4 @@
-name: Download Release and Create Archive
+name: Marketplace Automation
 
 on:
   workflow_dispatch:
@@ -18,7 +18,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          response=$(curl -s -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" "https://api.github.com/repos/${{ github.repository }}/releases/latest")
+          response=$(curl -s -H "Authorization: Bearer $GITHUB_TOKEN" "https://api.github.com/repos/${{ github.repository }}/releases/latest")
           LATEST_RELEASE_URL=$(echo $response | jq -r '.zipball_url')
           RELEASE_NOTES=$(echo $response | jq -r '.body')
           echo "LATEST_RELEASE_URL=$LATEST_RELEASE_URL" >> $GITHUB_OUTPUT
@@ -60,7 +60,7 @@ jobs:
           ADOBE_CLIENT_SECRET: ${{ secrets.ADOBE_CLIENT_SECRET }}
         run: |
           response=$(curl -X POST \
-          -u '${{ secrets.ADOBE_CLIENT_ID }}:${{ secrets.ADOBE_CLIENT_SECRET }}' \
+          -u '$ADOBE_CLIENT_ID:$ADOBE_CLIENT_SECRET' \
           -H 'Content-Type: application/json' \
           -d '{ "grant_type" : "session" }' \
           https://commercedeveloper-sandbox-api.adobe.com/rest/v1/app/session/token)
@@ -68,11 +68,8 @@ jobs:
           SESSION_TOKEN=$(echo $response | jq -r '.ust')
           echo "SESSION_TOKEN=$SESSION_TOKEN" >> $GITHUB_OUTPUT
           
-          # echo "Session Token Response: $response"
-          echo "Github token: $GITHUB_TOKEN"
-          echo "Api url: $ADOBE_API_URL"
-          echo "client id: $ADOBE_CLIENT_ID"
-          echo "client secret: $ADOBE_CLIENT_SECRET"
+          echo "Session Token Response: $response"
+
           
           
 
