--- a/.github/workflows/download-release.yml
+++ b/.github/workflows/download-release.yml
@@ -19,11 +19,11 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           response=$(curl -s -H "Authorization: Bearer $GITHUB_TOKEN" "https://api.github.com/repos/${{ github.repository }}/releases/latest")
-          LATEST_RELEASE_URL=$(echo $response | jq -r '.zipball_url')
-          RELEASE_NOTES=$(echo $response | jq -r '.body')
-          echo "LATEST_RELEASE_URL=$LATEST_RELEASE_URL" >> $GITHUB_OUTPUT
+          release_url=$(echo $response | jq -r '.zipball_url')
+          release_notes=$(echo $response | jq -r '.body')
+          echo "LATEST_RELEASE_URL=$release_url" >> $GITHUB_OUTPUT
           echo "RELEASE_NOTES<<EOF" >> $GITHUB_OUTPUT
-          echo "$RELEASE_NOTES" >> $GITHUB_OUTPUT
+          echo "$release_notes" >> $GITHUB_OUTPUT
           echo "EOF" >> $GITHUB_OUTPUT
           
           echo "Latest Release URL: $LATEST_RELEASE_URL"
