--- a/.github/workflows/download-release.yml
+++ b/.github/workflows/download-release.yml
@@ -110,6 +110,6 @@ jobs:
           
       - name: Upload package
         run: |
-          echo "Upload ID: ${{ steps.fetch_release.outputs.FILE_UPLOAD_ID }}"
+          echo "Upload ID: ${{ steps.upload_and_fetch.outputs.FILE_UPLOAD_ID }}"
           
 
