--- a/.github/workflows/download-release.yml
+++ b/.github/workflows/download-release.yml
@@ -114,10 +114,7 @@ jobs:
           SESSION_TOKEN: ${{ steps.get_session_token.outputs.SESSION_TOKEN }}
           BASE_URL: ${{ secrets.ADOBE_EQP_API_URL }}
           FILE_UPLOAD_ID: ${{ steps.upload_and_fetch.outputs.FILE_UPLOAD_ID }}
-        run: |
-          echo "Debug: First 10 chars of SESSION_TOKEN=${SESSION_TOKEN:0:10}..."
-          echo "Debug: FILE_UPLOAD_ID=$FILE_UPLOAD_ID"
-          
+        run: |          
           # Submit the package
           submission_response=$(curl -v -X POST \
           -H "Authorization: Bearer $SESSION_TOKEN" \
@@ -147,7 +144,7 @@ jobs:
             "short_description": "A brief description of your extension",
             "long_description": "Your long description here",
             "release_notes": "${{ steps.fetch_release.outputs.RELEASE_NOTES }}",
-            "version": "1.0.0",
+            "version": "1.2.0",
             "artifact": {
               "file_upload_id": "'$FILE_UPLOAD_ID'"
             },
@@ -160,7 +157,7 @@ jobs:
               "//Extensions//Your Category"
             ],
             "license_type": "apache",
-            "sku": "your-vendor/your-module-name"
+            "sku": "adyen/dummy-module"
           }]' \
           "${BASE_URL}/rest/v1/products/packages")
           
