--- a/.github/workflows/download-release.yml
+++ b/.github/workflows/download-release.yml
@@ -143,7 +143,16 @@ jobs:
             "name": "Magento Automation Test ",
             "short_description": "A brief description of your extension",
             "long_description": "Your long description here",
-            "release_notes": "${{ steps.fetch_release.outputs.RELEASE_NOTES }}",
+            "release_notes": "<!-- Release notes generated using configuration in .github/release.yml at main -->
+  
+              ## What's Changed
+              ### Other Changes 🖇️
+              * PR Patch Test 12 by @SushmitaThakur in https://github.com/SushmitaThakur/adyen-magento2-forked/pull/35
+              * PR 15 Update README.md by @SushmitaThakur in https://github.com/SushmitaThakur/adyen-magento2-forked/pull/37
+              * Release v10.1.0 by @github-actions in https://github.com/SushmitaThakur/adyen-magento2-forked/pull/36
+  
+  
+              **Full Changelog**: https://github.com/SushmitaThakur/adyen-magento2-forked/compare/v10.0.3...v10.1.0",
             "version": "1.2.0",
             "artifact": {
               "file_upload_id": "'$FILE_UPLOAD_ID'"
